Opened 14 years ago

Closed 13 years ago

#1758 closed defect (fixed)

Damaged transport stream cannot be remuxed

Reported by: Carl Eugen Hoyos Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: av_interleaved_write_frame h264 mpegts
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

http://thread.gmane.org/gmane.comp.video.ffmpeg.user/40329
Attached damaged transport stream can be decoded (with visible corruption) with FFmpeg, remuxing is impossible.

$ ffmpeg -i damagedh264.ts -an -vcodec copy out.ts
ffmpeg version N-44649-g6d87781 Copyright (c) 2000-2012 the FFmpeg developers
  built on Sep 20 2012 22:52:22 with gcc 4.5.3 (GCC)
  configuration: --cc=/usr/local/gcc-4.5.3/bin/gcc --enable-gpl
  libavutil      51. 73.101 / 51. 73.101
  libavcodec     54. 56.100 / 54. 56.100
  libavformat    54. 27.101 / 54. 27.101
  libavdevice    54.  2.101 / 54.  2.101
  libavfilter     3. 16.106 /  3. 16.106
  libswscale      2.  1.101 /  2.  1.101
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
[h264 @ 0x14f4180] non-existing SPS 0 referenced in buffering period
[h264 @ 0x14f4180] non-existing PPS referenced
[h264 @ 0x14f4180] non-existing SPS 0 referenced in buffering period
[h264 @ 0x14f4180] non-existing PPS 0 referenced
[h264 @ 0x14f4180] decode_slice_header error
[h264 @ 0x14f4180] no frame!
[h264 @ 0x14f4180] non-existing SPS 0 referenced in buffering period
[h264 @ 0x14f4180] non-existing PPS referenced
[h264 @ 0x14f4180] non-existing SPS 0 referenced in buffering period
[h264 @ 0x14f4180] non-existing PPS 0 referenced
[h264 @ 0x14f4180] decode_slice_header error
[h264 @ 0x14f4180] no frame!

...

[h264 @ 0x14f4180] non-existing SPS 0 referenced in buffering period
[h264 @ 0x14f4180] non-existing PPS referenced
[h264 @ 0x14f4180] non-existing SPS 0 referenced in buffering period
[h264 @ 0x14f4180] non-existing PPS 0 referenced
[h264 @ 0x14f4180] decode_slice_header error
[h264 @ 0x14f4180] no frame!
[mp3 @ 0x14f4a80] Header missing
[h264 @ 0x14f4180] mmco: unref short failure
    Last message repeated 5 times
[mpegts @ 0x14f0240] max_analyze_duration 5000000 reached at 5000000
[mpegts @ 0x14f0240] PES packet size mismatch
Input #0, mpegts, from 'damagedh264.ts':
  Duration: 00:00:12.19, start: 77402.001300, bitrate: 1679 kb/s
  Program 132
    Stream #0:0[0x2be]: Video: h264 (Main) ([27][0][0][0] / 0x001B), yuv420p, 720x576 [SAR 12:11 DAR 15:11], 52.58 fps, 50 tbr, 90k tbn, 50 tbc
    Stream #0:1[0x2bf](rus): Audio: mp2 ([4][0][0][0] / 0x0004), 48000 Hz, stereo, s16, 128 kb/s
[mpegts @ 0x14f5400] muxrate VBR, pcr every 2 pkts, sdt every 200, pat/pmt every 40 pkts
Output #0, mpegts, to 'out.ts':
  Metadata:
    encoder         : Lavf54.27.101
    Stream #0:0: Video: h264 ([27][0][0][0] / 0x001B), yuv420p, 720x576 [SAR 12:11 DAR 15:11], q=2-31, 52.58 fps, 90k tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (copy)
Press [q] to stop, [?] for help
[mpegts @ 0x14f5400] H.264 bitstream malformed, no startcode found, use the h264_mp4toannexb bitstream filter (-bsf h264_mp4toannexb)
av_interleaved_write_frame(): Invalid argument

Attachments (1)

damagedh264.ts (2.4 MB ) - added by Carl Eugen Hoyos 14 years ago.

Change History (2)

by Carl Eugen Hoyos, 14 years ago

Attachment: damagedh264.ts added

comment:1 by Carl Eugen Hoyos, 13 years ago

Component: undeterminedavformat
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.