mpegtsenc: Only test the first frame for missing h264_mp4toannexb filter.

Many video players accept broken frames in a transport stream, so there
is no reason to abort remuxing when encountering one, just print a
warning instead.

Fixes ticket #1758.